SUBDIRS = \
	Cms \
	Utils \
	Core \
	Query \
	JobScheduler \
	Bling \
	Platform \
	Widgets

ASSEMBLY = f-spot
TARGET = exe
LINK = $(REF_FSPOT)
ASSEMBLY_BUILD_FLAGS = -unsafe

SOURCES = \
	BlockProcessor.cs \
	BitConverter.cs \
	PhotoList.cs \
	ColorAdjustment/Adjustment.cs \
	ColorAdjustment/AutoStretch.cs \
	ColorAdjustment/Desaturate.cs \
	ColorAdjustment/FullColorAdjustment.cs \
	ColorAdjustment/SepiaTone.cs \
	ControlOverlay.cs \
	Core/App.cs \
	Core/ColorManagement.cs \
	Core/Photo.cs \
	Core/PhotoVersion.cs \
	Db.cs \
	DependentListStore.cs \
	DragDropTargets.cs \
	Editors/Editor.cs \
	Editors/AutoStretchEditor.cs \
	Editors/CropEditor.cs \
	Editors/ColorEditor.cs \
	Editors/DesaturateEditor.cs \
	Editors/RedEyeEditor.cs \
	Editors/SepiaEditor.cs \
	Editors/SoftFocusEditor.cs \
	Editors/TiltEditor.cs \
	ExportStore.cs \
	Extensions/ExportMenuItemNode.cs \
	Extensions/IExporter.cs \
	Extensions/ICommand.cs \
	Extensions/IMenuGenerator.cs \
	Extensions/IService.cs \
	Extensions/MenuNode.cs \
	Extensions/CommandMenuItemNode.cs \
	Extensions/ComplexMenuItemNode.cs \
	Extensions/PhotoSelectionCondition.cs \
	Extensions/PopupCommands.cs \
	Extensions/ServiceNode.cs \
	Extensions/SidebarPage.cs \
	Extensions/SidebarPageNode.cs \
	Extensions/TransitionNode.cs \
	Extensions/ViewModeCondition.cs \
	Fader.cs \
	FileBrowsableItem.cs \
	Filters/ChmodFilter.cs \
	Filters/FilterRequest.cs \
	Filters/FilterSet.cs \
	Filters/IFilter.cs \
	Filters/JpegFilter.cs \
	Filters/OrientationFilter.cs \
	Filters/ResizeFilter.cs \
	Filters/SharpFilter.cs \
	Filters/UniqueNameFilter.cs \
	Filters/WhiteListFilter.cs \
	FolderQueryWidget.cs \
	FullScreenView.cs \
	GroupAdaptor.cs \
	GroupSelector.cs \
	Accelerometer.cs \
	Histogram.cs \
	Loaders/AreaPreparedEventArgs.cs \
	Loaders/AreaUpdatedEventArgs.cs \
	Loaders/ImageLoader.cs \
	Loaders/IImageLoader.cs \
	Loaders/GdkImageLoader.cs \
	ImageLoaderThread.cs \
	Import/ImportController.cs \
	Import/ImportSource.cs \
	Import/FileImportSource.cs \
	InfoOverlay.cs \
	InternalProcess.cs \
	IOChannel.cs \
	ItemAction.cs \
	Imaging/DCRawFile.cs \
	Imaging/Bim.cs \
	Imaging/Ciff.cs \
	Imaging/Exif.cs \
	Imaging/ImageFile.cs \
	Imaging/IptcFile.cs \
	Imaging/JpegFile.cs \
	Imaging/JpegHeader.cs \
	Imaging/JpegUtils.cs \
	Imaging/MrwFile.cs \
	Imaging/OrderedWriter.cs \
	Imaging/PngFile.cs \
	Imaging/PnmFile.cs \
	Imaging/RafFile.cs \
	Imaging/SvgFile.cs \
	Imaging/X3fFile.cs \
	Imaging/XmpFile.cs \
	Imaging/Tiff.cs \
	JobStore.cs \
	Jobs/SyncMetadataJob.cs \
	Jobs/CalculateHashJob.cs \
	Loupe.cs \
	MainWindow.cs \
	MemorySurface.cs \
	MetaStore.cs \
	MetadataStore.cs \
	PhotoEventArgs.cs \
	PhotoImageView.cs \
	PhotoLoader.cs \
	PhotoPopup.cs \
	PhotoQuery.cs \
	PhotoStore.cs \
	PhotoTagMenu.cs \
	PhotoVersionCommands.cs \
	PhotoVersionMenu.cs \
	PhotoView.cs \
	PixbufUtils.cs \
	PixbufCache.cs \
	PixelBuffer.cs \
	Preferences.cs  \
	PrintOperation.cs \
	ProgressItem.cs \
	QueuedSqliteDatabase.cs \
	RotateCommand.cs \
	RollStore.cs \
	SelectionDataExtensions.cs \
	SendEmail.cs \
	XScreenSaverSlide.cs \
	SingleView.cs \
	Sharpener.cs \
	SoftFocus.cs \
	TagCommands.cs \
	TagPopup.cs \
	TagQueryWidget.cs \
	TagSelectionWidget.cs \
	TagStore.cs \
	ThumbnailCache.cs \
	ThumbnailGenerator.cs \
	Term.cs \
	TimeAdaptor.cs \
	TipWindow.cs \
	UI.Dialog/AboutDialog.cs \
	UI.Dialog/AdjustTimeDialog.cs \
	UI.Dialog/BuilderDialog.cs \
	UI.Dialog/DateRangeDialog.cs \
	UI.Dialog/EditExceptionDialog.cs \
	UI.Dialog/EditTagDialog.cs \
	UI.Dialog/EditTagIconDialog.cs \
	UI.Dialog/ExceptionDialog.cs \
	UI.Dialog/GladeDialog.cs \
	UI.Dialog/HigMessageDialog.cs \
	UI.Dialog/ImportDialog.cs \
	UI.Dialog/LastRollDialog.cs \
	UI.Dialog/PreferenceDialog.cs \
	UI.Dialog/ProgressDialog.cs \
	UI.Dialog/RatingFilterDialog.cs \
	UI.Dialog/RepairDbDialog.cs \
	UI.Dialog/SelectionRatioDialog.cs \
	UI.Dialog/TagSelectionDialog.cs \
	UI.Dialog/ThreadProgressDialog.cs \
	Updater.cs \
	UriCollection.cs \
	Util.cs \
	Vector.cs \
	ThumbnailCommand.cs \
	QueryWidget.cs \
	Query/HiddenTag.cs \
	Widgets/SlideShow.cs \
	Widgets/CompositeUtils.cs \
	Widgets/Dissolve.cs \
	Widgets/EditorPage.cs \
	Widgets/Filmstrip.cs \
	Widgets/FindBar.cs \
	Widgets/FolderTreePage.cs \
	Widgets/FolderTreeView.cs \
	Widgets/FolderTreeModel.cs \
	Widgets/CellRendererTextProgress.cs\
	Widgets/IEffect.cs \
	Widgets/ITransition.cs \
	Widgets/IconView.cs \
	Widgets/ImageDisplay.cs \
	Widgets/ImageInfo.cs \
	Widgets/InfoBox.cs \
	Widgets/MetadataDisplay.cs \
	Widgets/PanZoom.cs \
	Widgets/PreviewPopup.cs  \
	Widgets/Push.cs \
	Widgets/QueryView.cs \
	Widgets/RatingMenuItem.cs \
	Widgets/Reveal.cs \
	Widgets/ScalingIconView.cs \
	Widgets/Sidebar.cs \
	Widgets/TagEntry.cs \
	Widgets/TagMenu.cs \
	Widgets/TagView.cs \
	Widgets/Tests/FindBarTests.cs \
	Widgets/TrayView.cs \
	Widgets/ViewContext.cs \
	Widgets/Wipe.cs \
	XmpTagsImporter.cs \
	main.cs \
	Tests/UpdaterTests.cs


RESOURCES = \
	../COPYING \
	../icons/f-spot-not.png \
	../icons/f-spot-128.png \
	../icons/flower.png \
	dces.rdf \
	f-spot.glade \
	ui/main_window.ui \
	ui/version_name_dialog.ui \
	ui/import.ui \
	ui/mail_dialog.ui \
	UI.Dialog/ui/AdjustTimeDialog.ui \
	UI.Dialog/ui/DateRangeDialog.ui \
	UI.Dialog/ui/EditTagDialog.ui \
	UI.Dialog/ui/EditTagIconDialog.ui \
	UI.Dialog/ui/PreferenceDialog.ui \
	UI.Dialog/ui/RatingFilterDialog.ui \
	FSpot.addin.xml

include $(top_srcdir)/build/build.mk

bin_SCRIPTS = f-spot
EXTRA_DIST += f-spot.exe.config
module_SCRIPTS += f-spot.exe.config

